[gd_scene load_steps=5 format=2]

[ext_resource path="res://Car.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://SpatialGun.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 98.8663, 129.649 )

[node name="Car" type="Area2D" groups=[
"hittable",
]]
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3, 4 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DeathTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="ShootTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 1.5
one_shot = true
autostart = true

[node name="SpatialGun" parent="." instance=ExtResource( 3 )]

[node name="GunshotSoundEffect" parent="SpatialGun" index="0"]
sound_effect_folder_name = "gunshot"
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]

[editable path="SpatialGun"]
